# Engine

./: .gitignore  CMakeLists.txt  Sandbox.cap  premake5.lua
AssetBundler/: Application.xaml  Application.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
AssetBundler/Lib/: Vortice.D3DCompiler.xml  Vortice.DirectX.xml
Editor/: CMakeLists.txt
Editor/inc/: Viewport.h  (+3 more)
Lib/: CMakeLists.txt
Lib/inc/: Configuration.h  Logger.h  imgui.h  imgui_internal.h  win.h
Lib/inc/D3D11/: Pipeline.h  Renderer.h  ShaderProgram.h  Utils.h  imgui_impl_dx11.h
Lib/public/: Application.h  Components.h  Configuration.h  Engine.h  EntryPoint.h  Events.h  GUI.h  Input.h  Key.h  Logger.h  Mesh.h  MouseButton.h  Pipeline.h  Platform.h  RenderAPI.h  Renderer.h  ResourceManager.h  Test.h  Utils.h  Window.h  win.h
Lib/public/Containers/: Bitfield.h  HashMap.h  List.h  String.h  VertexBuffer.h
Lib/public/GuiComponent/: Button.h  Image.h  InputText.h  Section.h  Table.h  TreeNode.h  Vec3.h
Lib/public/Math/: Mat4.h  Vec3.h  Vec4.h
Lib/src/: Application.cpp  Components.cpp  Configuration.cpp  Events.cpp  GUI.cpp  Input.cpp  Logger.cpp  Mesh.cpp  Pipeline.cpp  Renderer.cpp  ResourceManager.cpp  Test.cpp  Utils.cpp  imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp
Lib/src/Containers/: VertexBuffer.cpp
Lib/src/GuiComponent/: Button.cpp  Image.cpp  InputText.cpp  Section.cpp  Table.cpp  TreeNode.cpp  Vec3.cpp
Lib/win32/: Platform.cpp  Window.cpp  imgui_impl_win32.cpp
Lib/win32/D3D11/: Pipeline.cpp  Renderer.cpp  ShaderProgram.cpp  imgui_impl_dx11.cpp
Sandbox/: CMakeLists.txt
Working Directory/: imgui.ini
(+5 files in other folders)
